[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Character/NPCs/NPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Character/NPCs/n30n/n30n.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/SimpleInput.tscn" type="PackedScene" id=3]

[node name="n30n" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="NameInput" parent="." index="11" instance=ExtResource( 3 )]

visible = false
margin_left = -192.0
margin_top = -290.0
margin_right = 192.0
margin_bottom = -216.0

[connection signal="input_entered" from="NameInput" to="." method="_on_NameInput_input_entered"]


